--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.5",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "^11.2.5",
     "@angular/compiler": "^11.2.5",
     "@angular/core": "^11.2.5",
     "@angular/forms": "^11.2.5",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "^11.2.5",
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
     "@pdftron/webviewer": "^8.0.0",
+    "angular-split": "^4.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.5.3",
     "tslib": "^2.0.0",
